now displaying browser location exact address through Google geolocation API

--- a/parkalot/templates/parkalot/customer.html
+++ b/parkalot/templates/parkalot/customer.html
@@ -28,9 +28,7 @@
         <div id="digital-clock">
             <div class="clock" id="current-time"><span class="not-used">00:00:00</span></div>
             <div class="clock" id="park-end-time"><span class="not-used">00:00</span></div>
+            <div id="customer-parking-address"></div>
         </div>
     {% endif %}
-    <div id="customer-parking-address">
-        <p></p>
-    </div>
 </div>
