--- a/pages/stylesheet.css
+++ b/pages/stylesheet.css
@@ -1,16 +1,23 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 header {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 200%;
+    color: dodgerblue;
     font-variant: small-caps;
     text-align: center;
 }
 
 nav {
+    width: 100%;
+    left: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 150%;
     font-variant: small-caps;
     text-align: center;
-    margin-left: -10px;
     padding: 5px 0px 5px 0px;
     background-color: dodgerblue;
 }
@@ -95,6 +102,7 @@ section .parking-spots {
     outline-color: dodgerblue;
     margin-left: 5px;
     padding: 5px 0px 0px 5px;
+    border-radius: 4px 4px 0px 0px;
 }
 
 section .parking-spots p {
